# Minecraft

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  build.bat  help.txt  main.c  output.txt  py_cppcheck.py  test.bat  tiny.bat
docs/: build.txt  controls.txt
icons/: icon.res
include/glad/: glad.c  glad.h
include/glm/detail/: type_half.inl
include/minecraft/: attribute.hpp  buffer.hpp  camera.hpp  game.hpp  glerror.hpp  lighting.hpp  ray.hpp  renderer.hpp  shader.hpp  vertexarray.hpp  vertices.hpp  window.hpp  worldgen.hpp
include/minecraft/audio/: sound.hpp  sounddata.hpp
include/minecraft/block/: block.hpp  blockenum.hpp  blockname.hpp  face.h  material.hpp
include/minecraft/buffer/: buffer.hpp
include/minecraft/buffers/: buffer.hpp
include/minecraft/camera/: camera.hpp
include/minecraft/data/: imagedata.h  uniformbuffer.h  vertexarray.hpp  vertexbuffer.hpp  vertices.hpp
include/minecraft/debug/: debug.hpp  debugmacro.h
include/minecraft/game/: game.hpp
include/minecraft/gfx/: texture.hpp
include/minecraft/glerror/: glerror.hpp
include/minecraft/lighting/: lighting.hpp
include/minecraft/math/: area.hpp  average.hpp  direction.hpp  frustum.hpp  glmath.hpp  line.hpp  plane.hpp  radians.hpp  volume.hpp
include/minecraft/math/shape/: sphere.hpp
include/minecraft/mesh/: blockmesh.hpp  chunkmesh.hpp
include/minecraft/physics/: ray.hpp
include/minecraft/renderer/: renderer.hpp
include/minecraft/rendering/: chunk.hpp  renderer.hpp  renderinfo.hpp
include/minecraft/shader/: shader.hpp
include/minecraft/window/: window.hpp
include/minecraft/world/: biome.h  chunkgenerator.hpp  perlin.hpp  worldgen.hpp
include/misc/: color.h  literals.hpp  terminal.h  timer.hpp
include/misc/boilerplate/: gcem_noerr.hpp  glm_noerr.hpp
include/mylib/: attribute.hpp  block.hpp  camera.h  camera.hpp  game.hpp  glerror.hpp  imagedata.h  lighting.hpp  opengl.hpp  opengl.hpp.gch  renderer.hpp  shader.h  shader.hpp  textures.h  vertices.h  vertices.hpp  window.h  window.hpp
include/mylib/block/: block.hpp  blockname.hpp  material.hpp
include/mylib/buffers/: buffer.hpp
include/mylib/gfx/: gfx.hpp  subtexture.hpp  texture.hpp
include/mylib/graphics/: shader.hpp  subtexture.hpp  textures.hpp
include/mylib/math/: average.hpp  glmath.hpp  line.hpp
include/mylib/physics/: ray.hpp
python/: block.py  plane.py  rotate.py  script.py  shader.py  terraingen.py
shaders/: fragmentshader.fs  vertexshader.vs
shaders/block/: blockfragmentshader.frag  blockfragmentshader.fs  blockvertexshader.vert  blockvertexshader.vs  func.frag  illusion.frag  rainbow.frag  rect.frag
shaders/light/: lightfragmentshader.fs  lightvertexshader.vert
shaders/line/: linefragmentshader.frag  linefragmentshader.fs  linevertexshader.vert
src/: Shader.cpp  attribute.cpp  block.cpp  buffer.cpp  camera.cpp  chunk.cpp  chunkgenerator.cpp  frustum.cpp  game.cpp  glad.c  glerror.cpp  glmath.cpp  lighting.cpp  main.cpp  material.cpp  perlin.cpp  radians.cpp  ray.cpp  renderer.cpp  shader.cpp  sound.cpp  sounddata.cpp  subtexture.cpp  texture.cpp  textures.cpp  vertexarray.cpp  vertices.cpp  window.cpp  worldgen.cpp
src/glad/: glad.c
textures/: textureatlas.psd  textureatlas.xcf
